--- a/eu4data/Cargo.toml
+++ b/eu4data/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "eu4txt"
+name = "eu4data"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-encoding_rs = "0.8.35"
-encoding_rs_io = "0.1.7"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
