--- a/eu4rs/Cargo.toml
+++ b/eu4rs/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.53", features = ["derive"] }
+eu4data = { version = "0.1.0", path = "../eu4data" }
 eu4txt = { path = "../eu4txt" }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 
 [dev-dependencies]
 tempfile = "3.3"
