--- a/eu4data/Cargo.toml
+++ b/eu4data/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+csv = "1.4.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+
+[dev-dependencies]
+eu4txt = { path = "../eu4txt" }
+tempfile = "3.23.0"
