--- a/eu4rs/Cargo.toml
+++ b/eu4rs/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 clap = { version = "4.5.53", features = ["derive"] }
 eu4data = { version = "0.1.0", path = "../eu4data" }
 eu4txt = { path = "../eu4txt" }
+image = "0.25.9"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 
