--- a/eu4txt/Cargo.toml
+++ b/eu4txt/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2024"
 encoding_rs = "0.8.35"
 encoding_rs_io = "0.1.7"
 serde = { version = "1.0.228", features = ["derive"] }
+
+[dev-dependencies]
+tempfile = "3.23.0"
