--- a/eu4rs/Cargo.toml
+++ b/eu4rs/Cargo.toml
@@ -5,11 +5,16 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.53", features = ["derive"] }
+env_logger = "0.11.8"
 eu4data = { version = "0.1.0", path = "../eu4data" }
 eu4txt = { path = "../eu4txt" }
 image = "0.25.9"
+log = "0.4.29"
+pollster = "0.4.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+wgpu = "0.20.0"
+winit = "0.29.15"
 
 [dev-dependencies]
 tempfile = "3.3"
