--- a/eu4data/Cargo.toml
+++ b/eu4data/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 csv = "1.4.0"
+encoding_rs = "0.8.35"
+encoding_rs_io = "0.1.7"
 eu4txt = { version = "0.1.0", path = "../eu4txt" }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
