ci: Add code coverage coverage via cargo-llvm-cov
- Install cargo-llvm-cov using taiki-e/install-action

- Add summary-only coverage generation step

- Maintain separate test step for clarity

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,9 @@ jobs:
 
     - name: Run tests
       run: cargo test --verbose
+
+    - name: Install cargo-llvm-cov
+      uses: taiki-e/install-action@cargo-llvm-cov
+
+    - name: Generate code coverage
+      run: cargo llvm-cov --verbose --summary-only
