--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         components: clippy, rustfmt
 
+    - name: Cache Cargo
+      uses: Swatinem/rust-cache@v2
+
     - name: Check formatting
       run: cargo fmt -- --check
 
