--- a/eu4rs/Cargo.toml
+++ b/eu4rs/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 ab_glyph = "0.2.32"
+bytemuck = { version = "1.24.0", features = ["derive"] }
 clap = { version = "4.5.53", features = ["derive"] }
 env_logger = "0.11.8"
 eu4data = { version = "0.1.0", path = "../eu4data" }
