--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,17 +26,8 @@ jobs:
     - name: Cache Cargo
       uses: Swatinem/rust-cache@v2
 
-    - name: Check formatting
-      run: cargo fmt -- --check
-
-    - name: Clippy
-      run: cargo clippy -- -D warnings
-
-    - name: Build
-      run: cargo build --verbose
-
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Run CI Pipeline
+      run: cargo xtask ci
 
     - name: Install cargo-llvm-cov
       uses: taiki-e/install-action@cargo-llvm-cov
