Add console view and async loading screen
- Add structured logging with log! macros via custom logger
- Implement loading screen UI with log console display
- Make app window async: show UI immediately while data loads
- Add cargo aliases for different log levels (run-debug, run-trace)
- Box AppState in AppFlow for better mutability patterns
- Update golden snapshots for text rendering changes

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,5 @@
 [alias]
 xtask = "run --package xtask --bin xtask --"
+run-debug = "run --package eu4rs --bin eu4rs -- --log-level debug"
+run-info = "run --package eu4rs --bin eu4rs -- --log-level info"
+run-trace = "run --package eu4rs --bin eu4rs -- --log-level trace"
