--- a/eu4rs/Cargo.toml
+++ b/eu4rs/Cargo.toml
@@ -13,6 +13,7 @@ eu4txt = { path = "../eu4txt" }
 image = "0.25.9"
 log = "0.4.29"
 pollster = "0.4.0"
+rayon = "1.11.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 wgpu = "0.20.0"
