--- a/eu4data/Cargo.toml
+++ b/eu4data/Cargo.toml
@@ -8,9 +8,11 @@ csv = "1.4.0"
 encoding_rs = "0.8.35"
 encoding_rs_io = "0.1.7"
 eu4txt = { version = "0.1.0", path = "../eu4txt" }
+humantime = "2.3.0"
 rayon = "1.8"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+walkdir = "2.5.0"
 
 [dev-dependencies]
 eu4txt = { path = "../eu4txt" }
