Add SchemaType derive macro for automatic field tracking
- Create eu4data_derive proc-macro crate with SchemaType derive
- Add FieldInfo struct and SchemaFields trait to coverage.rs
- Replace 'used' field with 'visualized' and 'simulated' flags
- Update ProvinceHistory with #[schema(visualized)] attributes
- Update docs generator with new Visualized/Simulated columns
- Update terminal report to show P/V/S counts

--- a/eu4data/Cargo.toml
+++ b/eu4data/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 csv = "1.4.0"
 encoding_rs = "0.8.35"
 encoding_rs_io = "0.1.7"
+eu4data_derive = { path = "../eu4data_derive" }
 eu4txt = { version = "0.1.0", path = "../eu4txt" }
 humantime = "2.3.0"
 rayon = "1.8"
