--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -13,3 +13,8 @@ serde_json = "1.0"
 dotenvy = "0.15"
 regex = "1.10"
 eu4data = { path = "../eu4data" }
+
+[dev-dependencies]
+assert_cmd = "2.0"
+predicates = "3.0"
+tempfile = "3.8"
