perf: Add build profile optimizations and improve CLI tests
- Configure Cargo.toml profile settings:
  - opt-level 2 for dependencies in dev/test builds
  - opt-level 1 for test binaries

- Refactor eu4rs CLI tests to use assert_cmd with pre-built binaries
  - Add assert_cmd and predicates dev-dependencies
  - Use CARGO_BIN_EXE_eu4rs instead of spawning cargo run

- Add Build Performance section to AGENTS.md:
  - Document sccache setup for compiler caching
  - Document cargo-nextest for faster test parallelism

- Enable explicit incremental compilation in .cargo/config.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,23 @@ members = [ "eu4data",
     "xtask",
 ]
 resolver = "2"
+
+# === Build Profile Optimizations ===
+
+# Dev builds: fast compile, no optimization
+[profile.dev]
+opt-level = 0
+debug = true
+
+# Test builds: slight optimization for faster test execution
+[profile.test]
+opt-level = 1
+
+# Optimize all dependencies even in dev/test builds
+# This is a big win: dependencies compile once with optimizations,
+# while your code stays fast to compile
+[profile.dev.package."*"]
+opt-level = 2
+
+[profile.test.package."*"]
+opt-level = 2
