--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Cache Cargo
       uses: Swatinem/rust-cache@v2
 
+    - name: Install cargo-nextest
+      uses: taiki-e/install-action@cargo-nextest
+
     - name: Run CI Pipeline
       run: cargo xtask ci
 
