--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,6 @@ jobs:
       uses: taiki-e/install-action@cargo-llvm-cov
 
     - name: Generate code coverage
-      run: cargo llvm-cov --verbose --summary-only
+      run: |
+        cargo clean -p eu4rs -p eu4data -p eu4txt -p xtask -p eu4data_derive
+        cargo llvm-cov --verbose --summary-only
