--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,5 @@ jobs:
 
     - name: Generate code coverage
       run: |
-        cargo clean -p eu4rs -p eu4data -p eu4txt -p xtask -p eu4data_derive
+        cargo clean -p eu4viz -p eu4data -p eu4txt -p xtask -p eu4data_derive
         cargo llvm-cov --verbose --summary-only
