feat: implement initial simulation engine and CLI
- Add `eu4sim` and `eu4sim-core` crates to workspace
- eu4sim-core: Implement `WorldState`, `Date`, and `ProvinceState` data structures
- eu4sim-core: Implement `step_world` function for date advancement and input processing
- eu4sim-core: Define `PlayerInputs` and `Command` types
- eu4sim-core: Add `WorldStateBuilder` for test state construction
- eu4sim-core: Add unit tests for date arithmetic and determinism
- eu4sim: Create CLI runner with configurable start year, ticks, and log level
- Register `run-sim-*` aliases in cargo config

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,6 +3,9 @@ xtask = "run --package xtask --bin xtask --"
 run-viz-debug = "run --package eu4viz --bin eu4viz -- --log-level debug"
 run-viz-info = "run --package eu4viz --bin eu4viz -- --log-level info"
 run-viz-trace = "run --package eu4viz --bin eu4viz -- --log-level trace"
+run-sim-debug = "run --package eu4sim --bin eu4sim -- --log-level debug"
+run-sim-info = "run --package eu4sim --bin eu4sim -- --log-level info"
+run-sim-trace = "run --package eu4sim --bin eu4sim -- --log-level trace"
 cov = "llvm-cov --summary-only"
 cov-summary = "llvm-cov --summary-only"
 
