feat(eu4data): improve Cultures coverage to 100%
- Implemented `Culture` struct fields to match all known fields in `cultures.txt`.
- Switched to `TolerantDeserialize` and `Default` to robustly handle duplicate keys and parsing failures.
- Added error logging for culture parsing failures using `log` crate.
- Updated `eu4data` dependency to include `log`.
- Updated Golden Snapshots for map modes (more cultures now visible due to better parsing).
- Updated `improve_coverage` workflow with best practices (TolerantDeserialize, strong typing, docs update).
- Regenerated `supported_fields.md` showing 100% parsed coverage for Cultures.

--- a/eu4data/Cargo.toml
+++ b/eu4data/Cargo.toml
@@ -10,6 +10,7 @@ encoding_rs_io = "0.1.7"
 eu4data_derive = { path = "../eu4data_derive" }
 eu4txt = { version = "0.1.0", path = "../eu4txt" }
 humantime = "2.3.0"
+log = "0.4.29"
 rayon = "1.8"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
