--- a/eu4data/Cargo.toml
+++ b/eu4data/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 csv = "1.4.0"
+dirs = "6.0.0"
 encoding_rs = "0.8.35"
 encoding_rs_io = "0.1.7"
 eu4data_derive = { path = "../eu4data_derive" }
