Add code statistics tooling with tokei + tera-cli
- Add tokei for lines-of-code counting (Rust-based, cargo-installable)
- Add tera-cli for JSON-to-HTML templating (Rust-based, Jinja2-style)
- Create dark-themed HTML template at .github/stats_template.html
- Extend CI workflow to generate stats on main branch pushes
  - Gated with: github.ref == 'refs/heads/main' && github.event_name == 'push'
  - Uploads stats.json and stats.html as artifacts (90-day retention)
- Add stats.json and stats.html to .gitignore
- Document usage in docs/code_statistics.md
- Add tool reference to GEMINI.md Build Performance section

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,20 @@ jobs:
 
     - name: Run CI Pipeline
       run: cargo xtask ci
+
+    - name: Generate Code Statistics
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: |
+        cargo install tokei tera-cli
+        tokei --output json > stats.json
+        tera -f .github/stats_template.html --json stats.json > stats.html
+
+    - name: Upload Stats Artifact
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      uses: actions/upload-artifact@v4
+      with:
+        name: code-statistics
+        path: |
+          stats.json
+          stats.html
+        retention-days: 90
