feat(eu4data): Implement auto-generated type system
This commit introduces a comprehensive system for auto-generating Rust structs from EU4 data files, achieving 100% coverage reporting for generated types.

Key Changes:
- codegen: build.rs now generates Rust structs and a mapping function for dynamic field lookup
- coverage: coverage.rs dynamically loads field metadata from generated types
- refactor: Moved manual types to types/ shim layer for clean API
- xtask: Added clean command and improved quota with geolocation
- docs: Updated support matrix showing massively improved parsed coverage

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ coverage.json
 stats.json
 stats.html
 .env
+
+# Auto-generated types
+# Auto-generated types
+eu4data/src/generated/types/*
+!eu4data/src/generated/types/mod.rs
