feat(data): implement integrity system Phase 2 - build-time manifest
- Manifest Module: GameDataManifest and FileHash structs
  - Embedded at build time via build.rs
  - Contains sim_version, git_commit, file_hashes, manifest_hash
  - Serializable (Serialize only, not Deserialize due to static slices)

- Build Script Extensions: Extended existing build.rs
  - Scans game data files when EU4_GAME_PATH env var set
  - Files: definition.csv, provinces.bmp, common/**/*.txt, history/**/*.txt
  - Computes SHA256 for each file
  - Generates combined manifest_hash (deterministic sorted order)
  - Outputs to src/generated/manifest_generated.rs

- Empty Manifest Fallback: Graceful handling when game data unavailable
  - Generates empty manifest with zero hash
  - Build warnings inform user about EU4_GAME_PATH requirement

- Dependencies: Added sha2 and walkdir
  - Both in dependencies (used by cache.rs, discovery.rs, coverage.rs)
  - Both in build-dependencies (used by build.rs)

- Architecture: Build-time generation for performance
  - No runtime file scanning overhead
  - Manifest embedded in binary
  - Git commit captured at build time
  - Deterministic hashing via sorted file paths

All 117 tests passing. CI validated (fmt, clippy, tests, release).

Next: Integrate manifest_hash into cache validation.

--- a/eu4data/Cargo.toml
+++ b/eu4data/Cargo.toml
@@ -21,6 +21,10 @@ sha2 = "0.10"
 thiserror = "2.0"
 walkdir = "2.5.0"
 
+[build-dependencies]
+sha2 = "0.10"
+walkdir = "2.5.0"
+
 [dev-dependencies]
 eu4txt = { path = "../eu4txt" }
 tempfile = "3.23.0"
