feat(sim): implement Phase 4 movement and pathfinding
Introduces a robust pathfinding and movement system:

- New game_pathfinding crate: Generic A* implementation with closed-set duplicate detection.

- eu4data: Implemented Graph trait for AdjacencyGraph and added CostCalculator trait.

- eu4sim-core:

  - Replaced simple VecDeque path with MovementState tracking fractional progress.

  - Implemented MovementSystem using accumulated time-based progress (base 10 ticks/province).

  - Integrated A* pathfinding into Command::Move in step.rs.

  - Implemented CostCalculator for WorldState to allow dynamic weighting (currently base 10).

  - Fixed O(n) Vec::remove(0) by using VecDeque::pop_front().

- Testing:

  - Added 	est_army_travel_time_exact integration test.

  - Added 	est_no_duplicate_processing for A* closed set.

  - Added 	est_movement_uses_dynamic_costs for cost calculation.

  - Fixed tests in combat.rs, expenses.rs, and loader.rs to match new state structure.

- TODOs added for future improvements (dynamic costs in movement tick, empty path handling).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [ "eu4data",
     "eu4txt",
     "xtask",
     "eu4sim",
-    "eu4sim-core",
+    "eu4sim-core", "game_pathfinding",
 ]
 resolver = "2"
 
