--- a/eu4sim-core/Cargo.toml
+++ b/eu4sim-core/Cargo.toml
@@ -11,3 +11,6 @@ eu4data = { path = "../eu4data" }
 serde_json = "1.0"
 multiversion = "0.7"
 game_pathfinding = { version = "0.1.0", path = "../game_pathfinding" }
+
+[dev-dependencies]
+proptest = "1.6"
