--- a/eu4sim-core/Cargo.toml
+++ b/eu4sim-core/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0"
 multiversion = "0.7"
 game_pathfinding = { version = "0.1.0", path = "../game_pathfinding" }
 rand = "0.8.5"
+im = { version = "15.1", features = ["serde"] }
 
 [dev-dependencies]
 proptest = "1.6"
