--- a/eu4sim/Cargo.toml
+++ b/eu4sim/Cargo.toml
@@ -10,6 +10,7 @@ clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
 log = "0.4"
 env_logger = "0.10"
+crossterm = "0.29.0"
 
 [dev-dependencies]
 assert_cmd = "2.0"
