docs(workflow): add commit workflows and verify-commit command
- Add `/finalize-commit` workflow with complete post-implementation checklist
- Add `/verify-commit` workflow for post-hoc checks
- Add `cargo xtask verify-commit` to check commit conventions safely
- Add Documentation Requirements section to GEMINI.md
- Update mid-term-status.md and roadmap.md
- Fix unused variable warning in `war_score.rs`

The workflow codifies our "commit is done" rules:
- CI must pass first
- Progression docs must be updated for major features
- Commit messages describe the diff, not the conversation
- `commit_msg.txt` should be used and then emptied to keep workspace clean

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ stats.json
 stats.html
 .env
 
-# Auto-generated types
+# Temporary commit message file (used by agents)
+commit_msg.txt
+
 # Auto-generated types
 eu4data/src/generated/types/*
 !eu4data/src/generated/types/mod.rs
