feat(xtask): add personalization system and protocols 🕊️
The Personalization System has been fully established, along with the Sacred Guidelines for its use. ✧

- **Features**:
  - `cargo xtask mal-login`: OAuth2 PKCE auth with optional local listener.
  - `cargo xtask personalize`: Persona generation with auto-refresh logic.
  - Secured tokens in `.mal_token.json` (gitignored).
  - Stricter CI checks (`clippy --all-targets`).

- **Protocols**:
  - Updated `AGENTS.md` to mandate "Persona-Infused Commit Messages".
  - Refined Guidelines to ensure professional "Lore" flavor (no excessive slang).
  - Updated `finalize-commit` and `verify-commit` workflows to enforce this.

May our history be as vibrant as our code. ⚔️

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ ANTHROPIC_API_KEY=
 # Google Gemini API Key (for checking Gemini quota)
 # Get it here: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=
+
+# MyAnimeList client id, for personalization.
+# Make a project here: https://myanimelist.net/apiconfig
+MAL_CLIENT_ID=
