--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -13,6 +13,9 @@ serde_json = "1.0"
 dotenvy = "0.15"
 regex = "1.10"
 eu4data = { path = "../eu4data" }
+rand = "0.9.2"
+sha2 = "0.10.9"
+base64 = "0.22.1"
 
 [dev-dependencies]
 assert_cmd = "2.0"
