--- a/eu4sim-core/Cargo.toml
+++ b/eu4sim-core/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 thiserror = "1.0"
+anyhow = "1.0"
 eu4data = { path = "../eu4data" }
 serde_json = "1.0"
 multiversion = "0.7"
