fix(ml): DirectML compatibility - disable bf16 for non-CUDA devices
- Detect device type and only enable bf16 mixed precision for CUDA

- DirectML and CPU now use fp32 (full precision)

- Add DIRECTML.md with setup instructions and troubleshooting

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ eu4data/src/generated/types/*
 # Machine Learning
 models/
 scripts/.venv/
+scripts/.venv-dml/
 scripts/__pycache__/
 *.zip
 *.safetensors
