--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ opt-level = 1
 # while your code stays fast to compile
 [profile.dev.package."*"]
 opt-level = 2
+debug = 0       # No debug info for dependencies
 
 [profile.test.package."*"]
 opt-level = 2
