feat(ml): add ROCm support and expand training options
- Add `scripts/setup_rocm.ps1` for native Windows AMD GPU setup
- Implement ROCm detection mixed-precision (fp16) support in `train_ai.py`
- Expose LoRA rank, alpha, dropout, weight decay, and scheduler args
- Fix `cargo xtask ml-ci` regression by enforcing workspace root CWD in `xtask`
- Fix `TypeError` in `SFTTrainer` argument passing for `max_steps`
- Update `ROCM.md` with setup guide and tuning results
- Add `python-dotenv` to project dependencies

--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "torch>=2.5.0",  # PyTorch CUDA index has up to 2.6.0+cu124
     "transformers>=4.57.3",
     "trl>=0.26.2",
+    "python-dotenv",
 ]
 
 # NOTE: DirectML support is available but requires manual installation due to
