feat(perf): SIMD taxation using SoA memory layout
Implements Structure-of-Arrays (SoA) for owned provinces to optimize memory access and enable SIMD batching.

- Replaces owned_provinces cache with SoA layout (ids, owners, base_tax, autonomy_floor)

- Interns owner tags to u16 to eliminate string hashing in hot path

- Pre-calculates autonomy floor to hoist logic check out of tick loop

- Sorts cache by owner to batch country modifier lookups (25x reduction)

- Adds docs/design/performance.md guide

--- a/eu4sim-core/Cargo.toml
+++ b/eu4sim-core/Cargo.toml
@@ -19,6 +19,7 @@ multiversion = "0.7"
 game_pathfinding = { version = "0.1.0", path = "../game_pathfinding" }
 rand = "0.8.5"
 im = { version = "15.1", features = ["serde"] }
+rustc-hash = "2.1"
 zip = { version = "2.2", default-features = false, features = ["deflate"] }
 rayon = "1.10"
 capnp = "0.20"
